Fixed "bug was not found" message.

--- a/BugTrackerUI/Components/BugList.razor
+++ b/BugTrackerUI/Components/BugList.razor
@@ -21,7 +21,7 @@
         }
     }
     else { 
-        <div class="alert alert-info">No bug was found! No bug was found! <a href="/new-bug"> Why don't you add a new one?</a></div>
+        <div class="alert alert-info">No bug was found! <a href="/new-bug"> Why don't you add a new one?</a></div>
     }
 
 </table>
