--- a/BugTrackerUI/Components/BugList.razor
+++ b/BugTrackerUI/Components/BugList.razor
@@ -1,30 +1,34 @@
 ﻿<h3>All Bugs</h3>
 
-<table>
+@if (Bugs.Count > 0)
+{
+    <table class="table table-bordered table-hover table-info table- col-md-auto">
 
-    @if (Bugs.Count > 0)
-    {
-        <tr>
-            <td>Id</td>
-            <td>Title</td>
-            <td>Description</td>
-            <td>Priority</td>
-        </tr>
-        @foreach (var bug in Bugs)
-        {
+        <thead>
             <tr>
-                <td>@bug.Id</td>
-                <td>@bug.Title</td>
-                <td>@bug.Description</td>
-                <td>@bug.Priority</td>
+                <td>Id</td>
+                <td>Title</td>
+                <td>Description</td>
+                <td>Priority</td>
             </tr>
-        }
-    }
-    else { 
-        <div class="alert alert-info">No bug was found! <a href="/new-bug"> Why don't you add a new one?</a></div>
-    }
-
-</table>
+        </thead>
+        <tbody>
+            @foreach (var bug in Bugs)
+            {
+                <tr>
+                    <td>@bug.Id</td>
+                    <td>@bug.Title</td>
+                    <td>@bug.Description</td>
+                    <td>@bug.Priority</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+else
+{
+    <div class="alert alert-info">No bug was found! <a href="/new-bug"> Why don't you add a new one?</a></div>
+}
 
 @code{
     [Inject]
@@ -33,6 +37,6 @@
 
     protected override void OnInitialized()
     {
-        Bugs = BugService.GetBugs().OrderBy(x => x.Priority).ToList();
+        Bugs = BugService.GetBugs().OrderByDescending(x => x.Priority).ToList();
     }
 }
