--- a/BugTrackerUI/Components/BugList.razor
+++ b/BugTrackerUI/Components/BugList.razor
@@ -1,4 +1,5 @@
-﻿<h3>All Bugs</h3>
+﻿@inherits BugListBase
+<h3>All Bugs</h3>
 
 @if (Bugs.Count > 0)
 {
@@ -28,15 +29,4 @@
 else
 {
     <div class="alert alert-info">No bug was found! <a href="/new-bug"> Why don't you add a new one?</a></div>
-}
-
-@code{
-    [Inject]
-    public IBugService BugService { get; set; }
-    public List<Bug> Bugs { get; set; }
-
-    protected override void OnInitialized()
-    {
-        Bugs = BugService.GetBugs().OrderByDescending(x => x.Priority).ToList();
-    }
 }
